add header elements, with placeholder links

--- a/index.html
+++ b/index.html
@@ -1,17 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content+"Webpage for Danni Froto's music, portraits and circus photography">
-    <meta name="keywords" content="photography, ireland, music, portraits, circus, irish photographer, pit photographer">
+    <meta name="description" content+" Webpage for Danni Frotos music, portraits and circus photography">
+    <meta name="keywords"
+        content="photography, ireland, music, portraits, circus, irish photographer, pit photographer">
 
     <link rel="stylesheet" href="assets/css/style.css">
 
+
     <title>Danni Frotography</title>
 </head>
+
 <body>
-    
+    <header>
+       <h1> <a href="index.html?"> Danni Froto</a> </h1>
+    </header>
+    <ul>
+        <li>
+            <a href="#">Contact Me</a>
+        </li>
+        <li>
+            <a href="#">Published</a>
+        </li>
+        <li>
+            <a href="#">Circus</a>
+        </li>
+        <li>
+            <a href="#">Portraits</a>
+        </li>
+        <li>
+            <a href="#">Music</a>
+        </li>
+        <li>
+            <a href="#">About Me</a>
+        </li>
+        <li>
+            <a href="index.html">Home</a>
+        </li>
+    </ul>
+    <section>Main Image and Bio</section>
+    <section>Music, Portraits, Circus Photos</section>
+    <footer>Social Media: Instagram, Facebook, Email/Contact page </footer>
 </body>
+
 </html>
