add photo as logo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-       <h1> <a href="index.html?"> Danni Froto</a> </h1>
+    <h1><a href="index.html"> <img src="../dannifrotologo.png" alt="Danni Froto Logo"> </a></h1>
     </header>
     <ul>
         <li>
