--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 
 <body>
     <header>
-    <h1><a href="index.html"> <img src="assets/images/dannifrotologo.png" alt="Danni Froto Logo"> </a></h1>
+    <h1><a href="index.html"><img src="assets/images/dannifrotologo.png" alt="Danni Froto Logo"
+                style="width: 200px; position: absolute; top: 1; left: 1;"></a></h1>
     </header>
+    
     <ul>
         <li>
             <a href="#">Contact Me</a>
