--- a/index.html
+++ b/index.html
@@ -16,34 +16,37 @@
 </head>
 
 <body>
+
     <header>
-    <h1><a href="index.html"><img src="assets/images/dannifrotologo.png" alt="Danni Froto Logo"
-                style="width: 200px; position: absolute; top: 1; left: 1;"></a></h1>
-    </header>
+    <h1><a href="index.html"><img id="logo" src="assets/images/dannifrotologo.png" alt="Danni Froto Logo"></a></h1>
+    <nav>
+        <ul id="menu">
+            <li>
+                <a href="#">Contact Me</a>
+            </li>
+            <li>
+                <a href="#">Published</a>
+            </li>
+            <li>
+                <a href="#">Circus</a>
+            </li>
+            <li>
+                <a href="#">Portraits</a>
+            </li>
+            <li>
+                <a href="#">Music</a>
+            </li>
+            <li>
+                <a href="#">About Me</a>
+            </li>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+        </ul>
+    </nav>
     
-    <ul>
-        <li>
-            <a href="#">Contact Me</a>
-        </li>
-        <li>
-            <a href="#">Published</a>
-        </li>
-        <li>
-            <a href="#">Circus</a>
-        </li>
-        <li>
-            <a href="#">Portraits</a>
-        </li>
-        <li>
-            <a href="#">Music</a>
-        </li>
-        <li>
-            <a href="#">About Me</a>
-        </li>
-        <li>
-            <a href="index.html">Home</a>
-        </li>
-    </ul>
+    </header>
+
     <section>Main Image and Bio</section>
     <section>Music, Portraits, Circus Photos</section>
     <footer>Social Media: Instagram, Facebook, Email/Contact page </footer>
