--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content+" Webpage for Danni Frotos music, portraits and circus photography">
+    <meta name="description" content=" Webpage for Danni Frotos music, portraits and circus photography">
     <meta name="keywords"
         content="photography, ireland, music, portraits, circus, irish photographer, pit photographer">
 
     <link rel="stylesheet" href="assets/css/style.css">
-
 
     <title>Danni Frotography</title>
 </head>
@@ -18,9 +16,14 @@
 <body>
 
     <header>
-    <h1><a href="index.html"><img id="logo" src="assets/images/dannifrotologo.png" alt="Danni Froto Logo"></a></h1>
-    <nav>
-        <ul id="menu">
+        <a href="index.html">
+    <h1>
+        <img id="logo" src="assets/images/dannifrotologo.png" alt="Danni Froto Logo"></a>
+    </h1>
+</a>
+
+    <nav id="menu">
+        <ul>
             <li>
                 <a href="#">Contact Me</a>
             </li>
@@ -44,8 +47,7 @@
             </li>
         </ul>
     </nav>
-    
-    </header>
+</header>
 
     <section>Main Image and Bio</section>
     <section>Music, Portraits, Circus Photos</section>
