--- a/index.html
+++ b/index.html
@@ -11,43 +11,41 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Danni Frotography</title>
+
 </head>
 
 <body>
 
-    <header>
-        <a href="index.html">
-    <h1>
-        <img id="logo" src="assets/images/dannifrotologo.png" alt="Danni Froto Logo"></a>
-    </h1>
-</a>
+    <header>       
+
+        <img id="logo" src="assets/images/dannifrotologo.png" alt="Danni Froto Logo">
 
     <nav id="menu">
         <ul>
             <li>
-                <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="#">About Me</a>
-            </li>
-            <li>
-                <a href="#">Music</a>
-            </li>
-            <li>
-                <a href="#">Portraits</a>
-            </li>
-            <li>
-                <a href="#">Circus</a>
+                <a href="#">Contact Me</a>
             </li>
             <li>
                 <a href="#">Published</a>
             </li>
             <li>
-                <a href="#">Contact Me</a>
+                <a href="#">Circus</a>
+            </li>
+            <li>
+                <a href="#">Portraits</a>
+            </li>
+            <li>
+                <a href="#">Music</a>
+            </li>
+            <li>
+                <a href="#">About Me</a>
+            </li>
+            <li>
+                <a href="index.html">Home</a>
             </li>
         </ul>
-
     </nav>
+
 </header>
 
     <section>Main Image and Bio</section>
