add image in circle fram

--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
 
 </head>
 
-<body>
-
     <header>       
 
         <img id="logo" src="assets/images/dannifrotologo.png" alt="Danni Froto Logo">
@@ -48,7 +46,16 @@
 
 </header>
 
-    <section>Main Image and Bio</section>
+<body>
+    <section id="bio">
+        <div>
+        <img src="assets/images/Danni-Froto-Image.jpg" alt="Danni Froto Image">
+             
+            </div>
+            <div>
+                Test Text
+            </div>
+        </section>
     <section>Music, Portraits, Circus Photos</section>
     <footer>Social Media: Instagram, Facebook, Email/Contact page </footer>
 </body>
