delete repeat commands

--- a/index.html
+++ b/index.html
@@ -47,15 +47,21 @@
 </header>
 
 <body>
-    <section id="bio">
-        <div>
-        <img src="assets/images/Danni-Froto-Image.jpg" alt="Danni Froto Image">
-             
+    <section>
+
+    </section>
+
+    <section id ="bio">
+        
+        <div id ="left-about">
+            Left             
             </div>
-            <div>
-                Test Text
+
+            <div id="right-about">
+                Right
             </div>
         </section>
+
     <section>Music, Portraits, Circus Photos</section>
     <footer>Social Media: Instagram, Facebook, Email/Contact page </footer>
 </body>
