change header position

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 
     <section id ="bio">
         
-        <div id ="left-about">
-            Left             
+        <div id ="photo">
+            Photo to be Added here             
             </div>
 
-            <div id="right-about">
-                Right
+            <div id="bio-line">
+                One liner bio: Capturing Memories
             </div>
         </section>
 
