--- a/index.html
+++ b/index.html
@@ -14,34 +14,35 @@
 
 </head>
 
-    <header>       
+<header>
 
-        <img id="logo" src="assets/images/dannifrotologo.png" alt="Danni Froto Logo">
+    <img id="logo" src="assets/images/dannifrotologo.png" alt="Danni Froto Logo">
 
     <nav id="menu">
         <ul>
             <li>
-                <a href="#">Contact Me</a>
-            </li>
-            <li>
-                <a href="#">Published</a>
-            </li>
-            <li>
-                <a href="#">Circus</a>
-            </li>
-            <li>
-                <a href="#">Portraits</a>
-            </li>
-            <li>
-                <a href="#">Music</a>
-            </li>
-            <li>
-                <a href="#">About Me</a>
-            </li>
-            <li>
                 <a href="index.html">Home</a>
             </li>
+            <li>
+                <a href="about.html">About Me</a>
+            </li>
+            <li>
+                <a href="music.html">Music</a>
+            </li>
+            <li>
+                <a href="portraits.html">Portraits</a>
+            </li>
+            <li>
+                <a href="circus.html">Circus</a>
+            </li>
+            <li>
+                <a href="publications.html">Published</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact Me</a>
+            </li>
         </ul>
+
     </nav>
 
 </header>
@@ -51,19 +52,35 @@
 
     </section>
 
-    <section id ="bio">
-        
-        <div id ="photo">
-            Photo to be Added here             
-            </div>
+    <section id="bio">
 
-            <div id="bio-line">
-                One liner bio: Capturing Memories
-            </div>
-        </section>
+        <div id="photo">
+            Photo to be Added here
+        </div>
+
+        <div id="bio-line">
+            One liner bio: Capturing Memories
+        </div>
+    </section>
 
     <section>Music, Portraits, Circus Photos</section>
-    <footer>Social Media: Instagram, Facebook, Email/Contact page </footer>
+    <footer>
+        <ul>
+
+            <li id="instagram" ><a href="https://www.instagram.com/dannifroto/"></a>
+                 <img id="instagram" src="assets/images/socials/insta-logo.png" alt="instagram">
+                 </li>
+
+            <li id="facebook"><a href="https://www.facebook.com/DanniFroto"></a>
+            <img id="facebook" src="assets/images/socials/facebook-logo.png" alt="facebook">
+        </li>
+
+            <li id="contact"> <a href="contact.html"></a>
+            <img id="contact" src="assets/images/socials/contact.png" alt="Contact Me"></li>
+
+        </ul>
+    </footer>
+
 </body>
 
 </html>
