add bio on home page

--- a/index.html
+++ b/index.html
@@ -54,29 +54,43 @@
 
     <section id="bio">
 
-        <div id="photo">
-            Photo to be Added here
+        <div id="profile-photo">
+            <img src="assets/images/Danni-Froto-Image.jpg" alt="Photo of Danni Froto in Black and White">
         </div>
 
         <div id="bio-line">
-            One liner bio: Capturing Memories
-        </div>
+            <h1> Capturing Memories . . . </h1>
+            <br>
+            <p> Dublin, Ireland based photographer with an eye for turning moments into memories you can look at again.. and again... and again. </p>
+            <br>
+            <p> Having traveled around Europe, Danni has captured a variety of photos from exciting <a href= "music.html" style="color:white;" > Music,</a> powerful <a href="portraits.html" style="color:white;">Portraits</a> to unmissable <a href="circus.html" style="color:white;">Circus</a> Performances. </p>
+            <br>
+
+        </dv>
     </section>
 
     <section>Music, Portraits, Circus Photos</section>
-    <footer>
-        <ul>
 
-            <li id="instagram" ><a href="https://www.instagram.com/dannifroto/"></a>
+
+    <footer>
+        <ul id="footer-icons">
+
+            <li id="instagram" >
+                <a href="https://www.instagram.com/dannifroto/" target="_blank">
                  <img id="instagram" src="assets/images/socials/insta-logo.png" alt="instagram">
+                </a>
                  </li>
 
-            <li id="facebook"><a href="https://www.facebook.com/DanniFroto"></a>
+            <li id="facebook">
+                <a href="https://www.facebook.com/DanniFroto" target="_blank">
             <img id="facebook" src="assets/images/socials/facebook-logo.png" alt="facebook">
+            </a>
         </li>
 
-            <li id="contact"> <a href="contact.html"></a>
-            <img id="contact" src="assets/images/socials/contact.png" alt="Contact Me"></li>
+            <li id="contact"> <a href="contact.html">
+            <img id="contact" src="assets/images/socials/contact.png" alt="Contact Me">
+        </a>
+    </li>
 
         </ul>
     </footer>
