add images to music gallery

--- a/music.html
+++ b/music.html
@@ -47,7 +47,15 @@
 
 </header>
 
-<section> MUSIC GALLERY </section>
+<section> 
+    <div id="music-gallery" class="gallery">
+
+        <img src="assets/images/music/hozier.jpg" alt="Hozier">
+        <img src="assets/images/music/daftpunk.jpg" alt="Daft Punk">
+        <img src="assets/images/music/queen.jpg" alt="Queen">
+
+    </div>
+</section>
 
 <footer>
     <ul id="footer-icons">
