end of day save

--- a/index.html
+++ b/index.html
@@ -61,12 +61,16 @@
         <div id="bio-line">
             <h1> Capturing Memories . . . </h1>
             <br>
-            <p> Dublin, Ireland based photographer with an eye for turning moments into memories you can look at again.. and again... and again. </p>
+            <p> Dublin, Ireland based photographer with an eye for turning moments into memories you can look at again..
+                and again... and again. </p>
             <br>
-            <p> Having traveled around Europe, Danni has captured a variety of photos from exciting <a href= "music.html" style="color:white;" > Music,</a> powerful <a href="portraits.html" style="color:white;">Portraits</a> to unmissable <a href="circus.html" style="color:white;">Circus</a> Performances. </p>
+            <p> Having traveled around Europe, Danni has captured a variety of photos from exciting <a href="music.html"
+                    style="color:white;"> Music,</a> powerful <a href="portraits.html"
+                    style="color:white;">Portraits</a> to unmissable <a href="circus.html"
+                    style="color:white;">Circus</a> Performances. </p>
             <br>
 
-        </dv>
+            </dv>
     </section>
 
     <section>Music, Portraits, Circus Photos</section>
@@ -75,22 +79,22 @@
     <footer>
         <ul id="footer-icons">
 
-            <li id="instagram" >
+            <li id="instagram">
                 <a href="https://www.instagram.com/dannifroto/" target="_blank">
-                 <img id="instagram" src="assets/images/socials/insta-logo.png" alt="instagram">
+                    <img id="instagram" src="assets/images/socials/insta-logo.png" alt="instagram">
                 </a>
-                 </li>
+            </li>
 
             <li id="facebook">
                 <a href="https://www.facebook.com/DanniFroto" target="_blank">
-            <img id="facebook" src="assets/images/socials/facebook-logo.png" alt="facebook">
-            </a>
-        </li>
+                    <img id="facebook" src="assets/images/socials/facebook-logo.png" alt="facebook">
+                </a>
+            </li>
 
             <li id="contact"> <a href="contact.html">
-            <img id="contact" src="assets/images/socials/contact.png" alt="Contact Me">
-        </a>
-    </li>
+                    <img id="contact" src="assets/images/socials/contact.png" alt="Contact Me">
+                </a>
+            </li>
 
         </ul>
     </footer>
