--- a/music.html
+++ b/music.html
@@ -55,9 +55,20 @@
         <img src="assets/images/music/queen.jpg" alt="Queen">
 
     </div>
+
 </section>
 
-<footer>
+<section>
+    <div id="music-about">
+        <h1 style="color: white;" >
+            Music was the first subject I picked up a camera to shoot. Since then I have been lucky enough to capture artists from across the world doing what they do best!
+        </h1>
+        <br>
+        <br>
+    </div>
+</section>
+
+<footer style="background-color: white;">
     <ul id="footer-icons">
 
         <li id="instagram">
