add circus and portrait gallery. change published to shop

--- a/circus.html
+++ b/circus.html
@@ -47,7 +47,26 @@
 
 </header>
 
-<section> CIRCUS GALLERY </section>
+<section>
+    <div id="circus-gallery" class="gallery">
+        <img src="assets/images/circus/circus-1.jpg" alt="Aerial Artist doing a split on a hoop">
+        <img src="assets/images/circus/circus-2.jpg" alt="Male and Female on a trapeze">
+        <img src="assets/images/circus/circus-3.jpg" alt="Women with whip after causing a rose to explode in petals from another women's mouth">
+
+    </div>
+
+</section>
+
+<section>
+    <div id="circus-about">
+        <h1 style="color: white;">
+            Another passion, aside from photography is circus. I myself love trapeze, but, getting to capture proffesionals performing is magical!
+        </h1>
+        <br>
+        <br>
+    </div>
+</section>
+
 <footer>
     <ul id="footer-icons">
 
