--- a/music.html
+++ b/music.html
@@ -47,7 +47,7 @@
 
 </header>
 
-<section> 
+<section>
     <div id="music-gallery" class="gallery">
 
         <img src="assets/images/music/hozier.jpg" alt="Hozier">
@@ -60,8 +60,9 @@
 
 <section>
     <div id="music-about">
-        <h1 style="color: white;" >
-            Music was the first subject I picked up a camera to shoot. Since then I have been lucky enough to capture artists from across the world doing what they do best!
+        <h1 style="color: white;">
+            Music was the first subject I picked up a camera to shoot. Since then I have been lucky enough to capture
+            artists from across the world doing what they do best!
         </h1>
         <br>
         <br>
