--- a/portraits.html
+++ b/portraits.html
@@ -47,7 +47,26 @@
 
 </header>
 
-<section> PORTRAIT GALLERY </section>
+<section>
+    <div id="portrait-gallery" class="gallery">
+        <img src="assets/images/portraits/fahrimac.jpg" alt="Portrait of Fahri Mac">
+        <img src="assets/images/portraits/saibhskelly.jpg" alt="Portrait of Saibh Skelly">
+        <img src="assets/images/portraits/dylanharcourt.jpg" alt="Portrait of Dylan Harcourt">
+
+    </div>
+
+</section>
+
+<section>
+    <div id="portrait-about">
+        <h1 style="color: white;">
+            Something I discovered later in my photgraphy career was the art of capturing someone in a more vunerable and true state, I hope to express that within the portraits I capture. 
+        </h1>
+        <br>
+        <br>
+    </div>
+</section>
+
 <footer>
     <ul id="footer-icons">
 
