--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                 <a href="circus.html">Circus</a>
             </li>
             <li>
-                <a href="publications.html">Published</a>
+                <a href="https://dannifroto.myshopify.com/products/phone-lights-and-dark-nights" target="_blank">
+                    Shop</a>
             </li>
             <li>
                 <a href="contact.html">Contact Me</a>
@@ -70,7 +71,7 @@
                     style="color:white;">Circus</a> Performances. </p>
             <br>
 
-            </dv>
+            </di>
     </section>
 
     <section>Music, Portraits, Circus Photos</section>
