create contact form

--- a/circus.html
+++ b/circus.html
@@ -35,9 +35,9 @@
             <li>
                 <a href="circus.html">Circus</a>
             </li>
-            <li>
-                <a href="publications.html">Published</a>
-            </li>
+        <li>
+            <a href="https://dannifroto.myshopify.com/products/phone-lights-and-dark-nights" target="_blank">
+                Shop</a>
             <li>
                 <a href="contact.html">Contact Me</a>
             </li>
