--- a/music.html
+++ b/music.html
@@ -36,8 +36,8 @@
                 <a href="circus.html">Circus</a>
             </li>
             <li>
-                <a href="publications.html">Published</a>
-            </li>
+                <a href="https://dannifroto.myshopify.com/products/phone-lights-and-dark-nights" target="_blank">
+                    Shop</a>
             <li>
                 <a href="contact.html">Contact Me</a>
             </li>
