--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,7 @@
 <section> 
 
     <form>
+        
         <label for="first-name">First Name:</label>
         <input type="text" id="first-name" name="first-name" required placeholder="Enter your first name">
     
@@ -59,15 +60,15 @@
         <p>Enquiry:</p>
         <label>
             <input type="checkbox" name="enquiry" value="music">
-            Music Enquiry
+            Music
         </label>
         <label>
             <input type="checkbox" name="enquiry" value="portrait">
-            Portrait Enquiry
+            Portrait
         </label>
         <label>
             <input type="checkbox" name="enquiry" value="circus">
-            Circus Enquiry
+            Circus
         </label>
         <label>
             <input type="checkbox" name="enquiry" value="other">
