add body opening

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 </head>
 
+<body>
+
 <header>
 
     <img id="logo" src="assets/images/dannifrotologo.png" alt="Danni Froto Logo">
@@ -22,9 +24,6 @@
         <ul>
             <li>
                 <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="about.html">About Me</a>
             </li>
             <li>
                 <a href="music.html">Music</a>
@@ -48,15 +47,12 @@
 
 </header>
 
-<body>
-    <section>
-
-    </section>
+/* Profile photo and Bio */
 
     <section id="bio">
 
         <div id="profile-photo">
-            <img src="assets/images/Danni-Froto-Image.jpg" alt="Photo of Danni Froto in Black and White">
+            <img src="assets/images/danni-froto-image.jpg" alt="Photo of Danni Froto in Black and White">
         </div>
 
         <div id="bio-line">
@@ -71,34 +67,31 @@
                     style="color:white;">Circus</a> Performances. </p>
             <br>
 
-            </di>
+            </div>
     </section>
 
-    <section>Music, Portraits, Circus Photos</section>
+<footer class="footer">
+    <ul id="footer-icons">
 
+        <li id="instagram">
+            <a href="https://www.instagram.com/dannifroto/" target="_blank">
+                <img id="instagram" src="assets/images/socials/insta-logo.png" alt="instagram">
+            </a>
+        </li>
 
-    <footer>
-        <ul id="footer-icons">
+        <li id="facebook">
+            <a href="https://www.facebook.com/DanniFroto" target="_blank">
+                <img id="facebook" src="assets/images/socials/facebook-logo.png" alt="facebook">
+            </a>
+        </li>
 
-            <li id="instagram">
-                <a href="https://www.instagram.com/dannifroto/" target="_blank">
-                    <img id="instagram" src="assets/images/socials/insta-logo.png" alt="instagram">
-                </a>
-            </li>
+        <li id="contact"> <a href="contact.html">
+                <img id="contact" src="assets/images/socials/contact.png" alt="Contact Me">
+            </a>
+        </li>
 
-            <li id="facebook">
-                <a href="https://www.facebook.com/DanniFroto" target="_blank">
-                    <img id="facebook" src="assets/images/socials/facebook-logo.png" alt="facebook">
-                </a>
-            </li>
-
-            <li id="contact"> <a href="contact.html">
-                    <img id="contact" src="assets/images/socials/contact.png" alt="Contact Me">
-                </a>
-            </li>
-
-        </ul>
-    </footer>
+    </ul>
+</footer>
 
 </body>
 
