--- a/circus.html
+++ b/circus.html
@@ -14,6 +14,8 @@
 
 </head>
 
+<body>
+
 <header>
 
     <img id="logo" src="assets/images/dannifrotologo.png" alt="Danni Froto Logo">
@@ -22,9 +24,6 @@
         <ul>
             <li>
                 <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="about.html">About Me</a>
             </li>
             <li>
                 <a href="music.html">Music</a>
@@ -67,7 +66,7 @@
     </div>
 </section>
 
-<footer>
+<footer style="background-color: white;">
     <ul id="footer-icons">
 
         <li id="instagram">
