--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,7 @@
             <li>
                 <a href="index.html">Home</a>
             </li>
-            <li>
-                <a href="about.html">About Me</a>
-            </li>
+            
             <li>
                 <a href="music.html">Music</a>
             </li>
@@ -87,7 +85,7 @@
 
 
 </section>
-<footer>
+<footer style="background-color: white;">
     <ul id="footer-icons">
 
         <li id="instagram">
