--- a/music.html
+++ b/music.html
@@ -14,6 +14,8 @@
 
 </head>
 
+<body>
+    
 <header>
 
     <img id="logo" src="assets/images/dannifrotologo.png" alt="Danni Froto Logo">
@@ -22,9 +24,6 @@
         <ul>
             <li>
                 <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="about.html">About Me</a>
             </li>
             <li>
                 <a href="music.html">Music</a>
@@ -69,7 +68,7 @@
     </div>
 </section>
 
-<footer style="background-color: white;">
+<footer class="footer">
     <ul id="footer-icons">
 
         <li id="instagram">
