--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
+/* header */
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -49,26 +51,29 @@
 
 /* Profile photo and Bio */
 
-    <section id="bio">
-
-        <div id="profile-photo">
-            <img src="assets/images/danni-froto-image.jpg" alt="Photo of Danni Froto in Black and White">
-        </div>
-
-        <div id="bio-line">
-            <h1> Capturing Memories . . . </h1>
-            <br>
-            <p> Dublin, Ireland based photographer with an eye for turning moments into memories you can look at again..
-                and again... and again. </p>
-            <br>
-            <p> Having traveled around Europe, Danni has captured a variety of photos from exciting <a href="music.html"
-                    style="color:white;"> Music,</a> powerful <a href="portraits.html"
-                    style="color:white;">Portraits</a> to unmissable <a href="circus.html"
-                    style="color:white;">Circus</a> Performances. </p>
-            <br>
-
+    <div class="content">
+        <section id="bio">
+            <div id="profile-photo">
+                <img src="assets/images/danni-froto-image.jpg" alt="Photo of Danni Froto in Black and White">
             </div>
-    </section>
+            <div id="bio-line">
+                <h1>Capturing Memories . . .</h1>
+                <br>
+                <p>Dublin, Ireland based photographer with an eye for turning moments into memories you can look at
+                    again.. and again... and again.</p>
+                <br>
+                <p>Having traveled around Europe, Danni has captured a variety of photos from exciting <a href="music.html"
+                        style="color: white;">Music,</a> powerful <a href="portraits.html"
+                        style="color: white;">Portraits</a> to unmissable <a href="circus.html"
+                        style="color: white;">Circus</a> Performances.</p>
+                <br>
+            </div>
+        </section>
+    
+        <section class="main-section">
+            <p></p>
+        </section>
+    </div>
 
 <footer class="footer">
     <ul id="footer-icons">
