--- a/circus.html
+++ b/circus.html
@@ -16,78 +16,80 @@
 
 <body>
 
-<header>
+    <header>
 
-    <img id="logo" src="assets/images/dannifrotologo.png" alt="Danni Froto Logo">
+        <img id="logo" src="assets/images/dannifrotologo.png" alt="Danni Froto Logo">
 
-    <nav id="menu">
-        <ul>
-            <li>
-                <a href="index.html">Home</a>
+        <nav id="menu">
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="music.html">Music</a>
+                </li>
+                <li>
+                    <a href="portraits.html">Portraits</a>
+                </li>
+                <li>
+                    <a href="circus.html">Circus</a>
+                </li>
+                <li>
+                    <a href="https://dannifroto.myshopify.com/products/phone-lights-and-dark-nights" target="_blank">
+                        Shop</a>
+                <li>
+                    <a href="contact.html">Contact Me</a>
+                </li>
+            </ul>
+
+        </nav>
+
+    </header>
+
+    <section>
+        <div id="circus-gallery" class="gallery">
+            <img src="assets/images/circus/circus-1.jpg" alt="Aerial Artist doing a split on a hoop">
+            <img src="assets/images/circus/circus-2.jpg" alt="Male and Female on a trapeze">
+            <img src="assets/images/circus/circus-3.jpg"
+                alt="Women with whip after causing a rose to explode in petals from another women's mouth">
+
+        </div>
+
+    </section>
+
+    <section>
+        <div id="circus-about">
+            <h1 style="color: white;">
+                Another passion, aside from photography is circus. I myself love trapeze, but, getting to capture
+                proffesionals performing is magical!
+            </h1>
+            <br>
+            <br>
+        </div>
+    </section>
+
+    <footer style="background-color: white;">
+        <ul id="footer-icons">
+
+            <li id="instagram">
+                <a href="https://www.instagram.com/dannifroto/" target="_blank">
+                    <img id="instagram" src="assets/images/socials/insta-logo.png" alt="instagram">
+                </a>
             </li>
-            <li>
-                <a href="music.html">Music</a>
+
+            <li id="facebook">
+                <a href="https://www.facebook.com/DanniFroto" target="_blank">
+                    <img id="facebook" src="assets/images/socials/facebook-logo.png" alt="facebook">
+                </a>
             </li>
-            <li>
-                <a href="portraits.html">Portraits</a>
+
+            <li id="contact"> <a href="contact.html">
+                    <img id="contact" src="assets/images/socials/contact.png" alt="Contact Me">
+                </a>
             </li>
-            <li>
-                <a href="circus.html">Circus</a>
-            </li>
-        <li>
-            <a href="https://dannifroto.myshopify.com/products/phone-lights-and-dark-nights" target="_blank">
-                Shop</a>
-            <li>
-                <a href="contact.html">Contact Me</a>
-            </li>
+
         </ul>
-
-    </nav>
-
-</header>
-
-<section>
-    <div id="circus-gallery" class="gallery">
-        <img src="assets/images/circus/circus-1.jpg" alt="Aerial Artist doing a split on a hoop">
-        <img src="assets/images/circus/circus-2.jpg" alt="Male and Female on a trapeze">
-        <img src="assets/images/circus/circus-3.jpg" alt="Women with whip after causing a rose to explode in petals from another women's mouth">
-
-    </div>
-
-</section>
-
-<section>
-    <div id="circus-about">
-        <h1 style="color: white;">
-            Another passion, aside from photography is circus. I myself love trapeze, but, getting to capture proffesionals performing is magical!
-        </h1>
-        <br>
-        <br>
-    </div>
-</section>
-
-<footer style="background-color: white;">
-    <ul id="footer-icons">
-
-        <li id="instagram">
-            <a href="https://www.instagram.com/dannifroto/" target="_blank">
-                <img id="instagram" src="assets/images/socials/insta-logo.png" alt="instagram">
-            </a>
-        </li>
-
-        <li id="facebook">
-            <a href="https://www.facebook.com/DanniFroto" target="_blank">
-                <img id="facebook" src="assets/images/socials/facebook-logo.png" alt="facebook">
-            </a>
-        </li>
-
-        <li id="contact"> <a href="contact.html">
-                <img id="contact" src="assets/images/socials/contact.png" alt="Contact Me">
-            </a>
-        </li>
-
-    </ul>
-</footer>
+    </footer>
 
 </body>
 
