--- a/index.html
+++ b/index.html
@@ -18,38 +18,38 @@
 
 <body>
 
-<header>
+    <header>
 
-    <img id="logo" src="assets/images/dannifrotologo.png" alt="Danni Froto Logo">
+        <img id="logo" src="assets/images/dannifrotologo.png" alt="Danni Froto Logo">
 
-    <nav id="menu">
-        <ul>
-            <li>
-                <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="music.html">Music</a>
-            </li>
-            <li>
-                <a href="portraits.html">Portraits</a>
-            </li>
-            <li>
-                <a href="circus.html">Circus</a>
-            </li>
-            <li>
-                <a href="https://dannifroto.myshopify.com/products/phone-lights-and-dark-nights" target="_blank">
-                    Shop</a>
-            </li>
-            <li>
-                <a href="contact.html">Contact Me</a>
-            </li>
-        </ul>
+        <nav id="menu">
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="music.html">Music</a>
+                </li>
+                <li>
+                    <a href="portraits.html">Portraits</a>
+                </li>
+                <li>
+                    <a href="circus.html">Circus</a>
+                </li>
+                <li>
+                    <a href="https://dannifroto.myshopify.com/products/phone-lights-and-dark-nights" target="_blank">
+                        Shop</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact Me</a>
+                </li>
+            </ul>
 
-    </nav>
+        </nav>
 
-</header>
+    </header>
 
-/* Profile photo and Bio */
+    /* Profile photo and Bio */
 
     <div class="content">
         <section id="bio">
@@ -62,41 +62,41 @@
                 <p>Dublin, Ireland based photographer with an eye for turning moments into memories you can look at
                     again.. and again... and again.</p>
                 <br>
-                <p>Having traveled around Europe, Danni has captured a variety of photos from exciting <a href="music.html"
-                        style="color: white;">Music,</a> powerful <a href="portraits.html"
+                <p>Having traveled around Europe, Danni has captured a variety of photos from exciting <a
+                        href="music.html" style="color: white;">Music,</a> powerful <a href="portraits.html"
                         style="color: white;">Portraits</a> to unmissable <a href="circus.html"
                         style="color: white;">Circus</a> Performances.</p>
                 <br>
             </div>
         </section>
-    
+
         <section class="main-section">
             <p></p>
         </section>
     </div>
 
-<footer class="footer">
-    <ul id="footer-icons">
+    <footer class="footer">
+        <ul id="footer-icons">
 
-        <li id="instagram">
-            <a href="https://www.instagram.com/dannifroto/" target="_blank">
-                <img id="instagram" src="assets/images/socials/insta-logo.png" alt="instagram">
-            </a>
-        </li>
+            <li id="instagram">
+                <a href="https://www.instagram.com/dannifroto/" target="_blank">
+                    <img id="instagram" src="assets/images/socials/insta-logo.png" alt="instagram">
+                </a>
+            </li>
 
-        <li id="facebook">
-            <a href="https://www.facebook.com/DanniFroto" target="_blank">
-                <img id="facebook" src="assets/images/socials/facebook-logo.png" alt="facebook">
-            </a>
-        </li>
+            <li id="facebook">
+                <a href="https://www.facebook.com/DanniFroto" target="_blank">
+                    <img id="facebook" src="assets/images/socials/facebook-logo.png" alt="facebook">
+                </a>
+            </li>
 
-        <li id="contact"> <a href="contact.html">
-                <img id="contact" src="assets/images/socials/contact.png" alt="Contact Me">
-            </a>
-        </li>
+            <li id="contact"> <a href="contact.html">
+                    <img id="contact" src="assets/images/socials/contact.png" alt="Contact Me">
+                </a>
+            </li>
 
-    </ul>
-</footer>
+        </ul>
+    </footer>
 
 </body>
 
