--- a/music.html
+++ b/music.html
@@ -15,81 +15,82 @@
 </head>
 
 <body>
-    
-<header>
 
-    <img id="logo" src="assets/images/dannifrotologo.png" alt="Danni Froto Logo">
+    <header>
 
-    <nav id="menu">
-        <ul>
-            <li>
-                <a href="index.html">Home</a>
+        <img id="logo" src="assets/images/dannifrotologo.png" alt="Danni Froto Logo">
+
+        <nav id="menu">
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="music.html">Music</a>
+                </li>
+                <li>
+                    <a href="portraits.html">Portraits</a>
+                </li>
+                <li>
+                    <a href="circus.html">Circus</a>
+                </li>
+                <li>
+                    <a href="https://dannifroto.myshopify.com/products/phone-lights-and-dark-nights" target="_blank">
+                        Shop</a>
+                <li>
+                    <a href="contact.html">Contact Me</a>
+                </li>
+            </ul>
+
+        </nav>
+
+    </header>
+
+    <section>
+        <div id="music-gallery" class="gallery">
+
+            <img src="assets/images/music/hozier.jpg" alt="Hozier">
+            <img src="assets/images/music/daftpunk.jpg" alt="Daft Punk">
+            <img src="assets/images/music/queen.jpg" alt="Queen">
+
+        </div>
+
+    </section>
+
+    <section>
+        <div id="music-about">
+            <h1 style="color: white;">
+                Music was the first subject I picked up a camera to shoot. Since then I have been lucky enough to
+                capture
+                artists from across the world doing what they do best!
+            </h1>
+            <br>
+            <br>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <ul id="footer-icons">
+
+            <li id="instagram">
+                <a href="https://www.instagram.com/dannifroto/" target="_blank">
+                    <img id="instagram" src="assets/images/socials/insta-logo.png" alt="instagram">
+                </a>
             </li>
-            <li>
-                <a href="music.html">Music</a>
+
+            <li id="facebook">
+                <a href="https://www.facebook.com/DanniFroto" target="_blank">
+                    <img id="facebook" src="assets/images/socials/facebook-logo.png" alt="facebook">
+                </a>
             </li>
-            <li>
-                <a href="portraits.html">Portraits</a>
+
+            <li id="contact"> <a href="contact.html">
+                    <img id="contact" src="assets/images/socials/contact.png" alt="Contact Me">
+                </a>
             </li>
-            <li>
-                <a href="circus.html">Circus</a>
-            </li>
-            <li>
-                <a href="https://dannifroto.myshopify.com/products/phone-lights-and-dark-nights" target="_blank">
-                    Shop</a>
-            <li>
-                <a href="contact.html">Contact Me</a>
-            </li>
+
         </ul>
-
-    </nav>
-
-</header>
-
-<section>
-    <div id="music-gallery" class="gallery">
-
-        <img src="assets/images/music/hozier.jpg" alt="Hozier">
-        <img src="assets/images/music/daftpunk.jpg" alt="Daft Punk">
-        <img src="assets/images/music/queen.jpg" alt="Queen">
-
-    </div>
-
-</section>
-
-<section>
-    <div id="music-about">
-        <h1 style="color: white;">
-            Music was the first subject I picked up a camera to shoot. Since then I have been lucky enough to capture
-            artists from across the world doing what they do best!
-        </h1>
-        <br>
-        <br>
-    </div>
-</section>
-
-<footer class="footer">
-    <ul id="footer-icons">
-
-        <li id="instagram">
-            <a href="https://www.instagram.com/dannifroto/" target="_blank">
-                <img id="instagram" src="assets/images/socials/insta-logo.png" alt="instagram">
-            </a>
-        </li>
-
-        <li id="facebook">
-            <a href="https://www.facebook.com/DanniFroto" target="_blank">
-                <img id="facebook" src="assets/images/socials/facebook-logo.png" alt="facebook">
-            </a>
-        </li>
-
-        <li id="contact"> <a href="contact.html">
-                <img id="contact" src="assets/images/socials/contact.png" alt="Contact Me">
-            </a>
-        </li>
-
-    </ul>
-</footer>
+    </footer>
 
 </body>
 
