--- a/portraits.html
+++ b/portraits.html
@@ -15,79 +15,80 @@
 </head>
 
 <body>
-    
+
     <header>
 
-    <img id="logo" src="assets/images/dannifrotologo.png" alt="Danni Froto Logo">
+        <img id="logo" src="assets/images/dannifrotologo.png" alt="Danni Froto Logo">
 
-    <nav id="menu">
-        <ul>
-            <li>
-                <a href="index.html">Home</a>
+        <nav id="menu">
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="music.html">Music</a>
+                </li>
+                <li>
+                    <a href="portraits.html">Portraits</a>
+                </li>
+                <li>
+                    <a href="circus.html">Circus</a>
+                </li>
+                <li>
+                    <a href="https://dannifroto.myshopify.com/products/phone-lights-and-dark-nights" target="_blank">
+                        Shop</a>
+                <li>
+                    <a href="contact.html">Contact Me</a>
+                </li>
+            </ul>
+
+        </nav>
+
+    </header>
+
+    <section>
+        <div id="portrait-gallery" class="gallery">
+            <img src="assets/images/portraits/fahrimac.jpg" alt="Portrait of Fahri Mac">
+            <img src="assets/images/portraits/saibhskelly.jpg" alt="Portrait of Saibh Skelly">
+            <img src="assets/images/portraits/dylanharcourt.jpg" alt="Portrait of Dylan Harcourt">
+
+        </div>
+
+    </section>
+
+    <section>
+        <div id="portrait-about">
+            <h1 style="color: white;">
+                Something I discovered later in my photgraphy career was the art of capturing someone in a more
+                vunerable and true state, I hope to express that within the portraits I capture.
+            </h1>
+            <br>
+            <br>
+        </div>
+    </section>
+
+    <footer style="background-color: white;">
+        <ul id="footer-icons">
+
+            <li id="instagram">
+                <a href="https://www.instagram.com/dannifroto/" target="_blank">
+                    <img id="instagram" src="assets/images/socials/insta-logo.png" alt="instagram">
+                </a>
             </li>
-            <li>
-                <a href="music.html">Music</a>
+
+            <li id="facebook">
+                <a href="https://www.facebook.com/DanniFroto" target="_blank">
+                    <img id="facebook" src="assets/images/socials/facebook-logo.png" alt="facebook">
+                </a>
             </li>
-            <li>
-                <a href="portraits.html">Portraits</a>
+
+            <li id="contact"> <a href="contact.html">
+                    <img id="contact" src="assets/images/socials/contact.png" alt="Contact Me">
+                </a>
             </li>
-            <li>
-                <a href="circus.html">Circus</a>
-            </li>
-            <li>
-                <a href="https://dannifroto.myshopify.com/products/phone-lights-and-dark-nights" target="_blank">
-                    Shop</a>
-            <li>
-                <a href="contact.html">Contact Me</a>
-            </li>
+
         </ul>
-
-    </nav>
-
-</header>
-
-<section>
-    <div id="portrait-gallery" class="gallery">
-        <img src="assets/images/portraits/fahrimac.jpg" alt="Portrait of Fahri Mac">
-        <img src="assets/images/portraits/saibhskelly.jpg" alt="Portrait of Saibh Skelly">
-        <img src="assets/images/portraits/dylanharcourt.jpg" alt="Portrait of Dylan Harcourt">
-
-    </div>
-
-</section>
-
-<section>
-    <div id="portrait-about">
-        <h1 style="color: white;">
-            Something I discovered later in my photgraphy career was the art of capturing someone in a more vunerable and true state, I hope to express that within the portraits I capture. 
-        </h1>
-        <br>
-        <br>
-    </div>
-</section>
-
-<footer style="background-color: white;">
-    <ul id="footer-icons">
-
-        <li id="instagram">
-            <a href="https://www.instagram.com/dannifroto/" target="_blank">
-                <img id="instagram" src="assets/images/socials/insta-logo.png" alt="instagram">
-            </a>
-        </li>
-
-        <li id="facebook">
-            <a href="https://www.facebook.com/DanniFroto" target="_blank">
-                <img id="facebook" src="assets/images/socials/facebook-logo.png" alt="facebook">
-            </a>
-        </li>
-
-        <li id="contact"> <a href="contact.html">
-                <img id="contact" src="assets/images/socials/contact.png" alt="Contact Me">
-            </a>
-        </li>
-
-    </ul>
-</footer>
+    </footer>
 
 </body>
 
