adjust home page styling

--- a/circus.html
+++ b/circus.html
@@ -60,8 +60,7 @@
     <section>
         <div id="circus-about">
             <h1 style="color: white;">
-                Another passion, aside from photography is circus. I myself love trapeze, but, getting to capture
-                proffesionals performing is magical!
+                "Another passion, aside from photography is circus. I myself love trapeze, but, getting to capture proffesionals performing is magical!"
             </h1>
             <br>
             <br>
