--- a/contact.html
+++ b/contact.html
@@ -84,6 +84,11 @@
 
 
 
+<div id="message-container" style="display: none;">
+  <p id="success-message">Thank you for submitting the form!</p>
+</div>
+
+
 </section>
 <footer style="background-color: white;">
     <ul id="footer-icons">
