--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-/* header */
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,7 +37,6 @@
                 <li>
                     <a href="https://dannifroto.myshopify.com/products/phone-lights-and-dark-nights" target="_blank">
                         Shop</a>
-                </li>
                 <li>
                     <a href="contact.html">Contact Me</a>
                 </li>
@@ -49,7 +46,6 @@
 
     </header>
 
-    /* Profile photo and Bio */
 
     <div class="content">
         <section id="bio">
@@ -67,6 +63,9 @@
                         style="color: white;">Portraits</a> to unmissable <a href="circus.html"
                         style="color: white;">Circus</a> Performances.</p>
                 <br>
+                <p> "My portfolio showcases the passion and intensity that I bring to every gig, capturing the energy and excitement of the artists and their fans. I strive to capture the raw emotion and authenticity of each performance, creating images that transport viewers straight to the heart of the action.</p>
+                <br>
+                <p> As a live gig photographer, I've had the opportunity to capture some of the most electrifying moments on stage. From internationally acclaimed artist Hozier to the Grammy Award-winning duo Rodrigo y Gabriela, and even the legendary Queen, I've had the privilege of photographing some of the biggest names in the music industry."</p>
             </div>
         </section>
 
