--- a/music.html
+++ b/music.html
@@ -10,8 +10,6 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <title>Danni Frotography</title>
-
 </head>
 
 <body>
@@ -50,7 +48,7 @@
         <div id="music-gallery" class="gallery">
 
             <img src="assets/images/music/hozier.jpg" alt="Hozier">
-            <img src="assets/images/music/daftpunk.jpg" alt="Daft Punk">
+            <img src="assets/images/music/daft-punk.jpg" alt="Daft Punk">
             <img src="assets/images/music/queen.jpg" alt="Queen">
 
         </div>
@@ -60,9 +58,7 @@
     <section>
         <div id="music-about">
             <h1 style="color: white;">
-                Music was the first subject I picked up a camera to shoot. Since then I have been lucky enough to
-                capture
-                artists from across the world doing what they do best!
+                "Music was the first subject I picked up a camera to shoot. Since then I have been lucky enough to capture artists from across the world doing what they do best!""
             </h1>
             <br>
             <br>
