--- a/portraits.html
+++ b/portraits.html
@@ -48,9 +48,9 @@
 
     <section>
         <div id="portrait-gallery" class="gallery">
-            <img src="assets/images/portraits/fahrimac.jpg" alt="Portrait of Fahri Mac">
-            <img src="assets/images/portraits/saibhskelly.jpg" alt="Portrait of Saibh Skelly">
-            <img src="assets/images/portraits/dylanharcourt.jpg" alt="Portrait of Dylan Harcourt">
+            <img src="assets/images/portraits/fahri-mac.jpg" alt="Portrait of Fahri Mac">
+            <img src="assets/images/portraits/saibh-skelly.jpg" alt="Portrait of Saibh Skelly">
+            <img src="assets/images/portraits/dylan-harcourt.jpg" alt="Portrait of Dylan Harcourt">
 
         </div>
 
@@ -59,8 +59,7 @@
     <section>
         <div id="portrait-about">
             <h1 style="color: white;">
-                Something I discovered later in my photgraphy career was the art of capturing someone in a more
-                vunerable and true state, I hope to express that within the portraits I capture.
+                "Something I discovered later in my photgraphy career was the art of capturing someone in a more vunerable and true state, I hope to express that within the portraits I capture.""
             </h1>
             <br>
             <br>
